- Wallpaper selector now with preview thumbnails
- Settings script reworked completely. Implementation of custom modules are now possible. 
- Waybar settings module to edit some ML4W waybar themes settings on the fly
- SDDM settings module to update the SDDM background with current wallpaper

Qtile:
- Removed wayland support due to many limitations. Installation script will rename /usr/share/wayland-sessions/qtile-wayland.session to qtile-wayland.bak to hide in sddm


Version 2.6.1
https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.6.1
--------------------------------------------------------
Installation:
- Add hook.sh to modify the installation files just before the copy procedure into ~/dotfiles. Please check the README.md for more information

Settings Script:
- Added custom.conf which is included at the bottom of the hyprland.conf and can hold you personal configurations. Editable in the section Custom

Hyprland:
- Add foldable module for hardware information
- Add keyboard layout to hardware information
- Add waybar starter theme to waybar

Version 2.6
https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.6
--------------------------------------------------------
Installation:
- Script ensures with the start that rsync and gum is installed
- All dialogues implemented with gum to increase usability
- New .dev folder with sync scripts added to sync from dotfiles-version/* to ~/dotfiles (Please check before executing)
- exa replaced with eza (exa not maintained anymore)

Hyprland:
- New settings cli app to change configuration variations on the fly. SUPER+CTRL+S or wheel icon in waybar.
- New variations for decoration and window
- Variations for monitor settings introduced (can be used to define a custom multi-monitor setup. Please see the Hyprland Wiki)
- More keybindings for function keys added
- New ML4W black and white Waybar Theme (+ bottom and blur version)

Known issues Qtile Wayland:
- GTK dark theme not always working