@@ -29,6 +29,7 @@ configuration {
 
 /* ---- Load pywal colors (custom wal template) ---- */
 @import "~/.cache/wal/colors-rofi-pywal"
+@import "~/.cache/current_wallpaper.rasi"
 
 /* ---- Window ---- */
 window {
@@ -58,7 +59,7 @@ mainbox {
     spacing:                      0px;
     margin:                       0px;
     background-color:             @background;
-    background-image:             url("~/.cache/current_wallpaper.jpg", height);
+    background-image:             @current-image;
     children:                     ["imagebox","listbox"];
 }
 
