@@ -1,6 +1,6 @@
 [General]
 
-Background="Backgrounds/current_wallpaper.jpg"
+Background="Backgrounds/CURRENTWALLPAPER"
 
 ## Path relative to the theme root directory. Most standard image file formats are allowed including support for transparency. (e.g. background.jpeg/illustration.GIF/Foto.png/undraw.svgz)
 
