@@ -12,6 +12,7 @@ Hyprland:
 - Settings script reworked completely. Implementation of custom modules are now possible. 
 - Waybar settings module to edit some ML4W waybar themes settings on the fly
 - SDDM settings module to update the SDDM background with current wallpaper
+- All image formats are now supported for setting a wallpaper (jpg,jpeg,png,...)
 
 Qtile:
 - Removed wayland support due to many limitations. Installation script will rename /usr/share/wayland-sessions/qtile-wayland.session to qtile-wayland.bak to hide in sddm
